@startuml

title __ADAPTER's Class Diagram__\n

  namespace com.jue.framework {
    namespace adapter {
      class com.jue.framework.adapter.CommonAdapter {
          - mList : List<T>
          - onBindDataListener : OnBindDataListener<T>
          - onMoreBindDataListener : OnMoreBindDataListener<T>
          + CommonAdapter()
          + CommonAdapter()
          + getItemCount()
          + getItemViewType()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace adapter {
      interface com.jue.framework.adapter.CommonAdapter.OnBindDataListener {
          {abstract} + getLayoutId()
          {abstract} + onBindViewHolder()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace adapter {
      interface com.jue.framework.adapter.CommonAdapter.OnMoreBindDataListener {
          {abstract} + getItemType()
      }
    }
  }
  

  namespace com.jue.framework {
    namespace adapter {
      class com.jue.framework.adapter.CommonViewHolder {
          - mContentView : View
          - mViews : SparseArray<View>
          + CommonViewHolder()
          + getView()
          {static} + getViewHolder()
          + setBackgroundColor()
          + setImageFile()
          + setImageResource()
          + setImageUrl()
          + setImageUrl()
          + setText()
          + setTextColor()
          + setVisibility()
      }
    }
  }
  

  com.jue.framework.adapter.CommonAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.jue.framework.adapter.CommonAdapter +-down- com.jue.framework.adapter.CommonAdapter.OnBindDataListener
  com.jue.framework.adapter.CommonAdapter +-down- com.jue.framework.adapter.CommonAdapter.OnMoreBindDataListener
  com.jue.framework.adapter.CommonViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
